--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "bootstrap": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
